--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-feedparser==6.0.10
-requests==2.31.2
-beautifulsoup4==4.12.2
-python-dateutil==2.8.2
+undetected-chromedriver==3.5.4
+selenium==4.16.0
